--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Portfolio of Ruan Rodrigues, a Computer Science student with skills in Python, Java, and software development.">
-        <title>Portfolio</title>
+        <title>Ruan Rodrigues</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
