--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2>Experience</h2>
             <ul>
                 <li>
-                    <strong>Teaching Assistant - Programming 2</strong> – Universidade Federal de Campina Grande, Dec 2024 - Present (5 months)
+                    <strong>Teaching Assistant - Programming 2</strong> – Universidade Federal de Campina Grande, Dec 2024 - Alp 2025
                     <ul>
                         <li>Assists students in understanding programming concepts.</li>
                         <li>Organizes and conducts practical activities to reinforce learning.</li>
@@ -109,6 +109,13 @@
                 <li>Generates PDF reports using report generation tools.</li>
             </ul>
             </div>
+
+            <div class="img-container">
+                <img src="statics/fit1.png" alt="">
+                <img src="statics/fit2.png" alt="">
+              </div>
+              
+              
         </section>
 
         <section id="contact">
