--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@
 
 <body>
     <header>
-        <h1>Welcome!</h1>
-
-        <!-- Botão para abrir/fechar o menu -->
-        <button id="menu-toggle" class="menu-button">☰</button>
+        <h1>Welcome, I'm Ruan</h1>
+        <!-- Botão só aparece no mobile -->
         
-        <!-- Sub-menu de links -->
+        <!-- Menu de navegação -->
         <nav id="menu" class="menu-links">
-          <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#soft-skills">Soft Skills</a></li>
-            <li><a href="#languages">Languages</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#tec-skills">Technical Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#soft-skills">Soft Skills</a></li>
+                <li><a href="#languages">Languages</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#tec-skills">Technical Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
+
         
     </header>
 
