--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
         <h1>Welcome, I'm Ruan</h1>
         <!-- Botão só aparece no mobile -->
-        
+        <button id="menu-toggle" class="menu-button">☰</button>
+
         <!-- Menu de navegação -->
         <nav id="menu" class="menu-links">
             <ul>
